# pv-bbp

./: .gitsubprojects  CMakeLists.txt  FindBBP-SDK.cmake  pqCircuitReaderPanel.cxx  pqCircuitReaderPanelBase.cxx  pqCircuitReaderPanelBase.h  pqCircuitReaderPanelBase.ui  pqCircuitReaderPanelMesh.cxx  pqCircuitReaderPanelMesh.h  pqCircuitReaderPanelSoma.cxx  pqCircuitReaderPanelSoma.h  pv_BBP_Filters.xml  pv_BBP_Readers.xml  pv_BBP_Sources.xml  test_bbplink.cpp  vtkCircuitReader.cxx  vtkCircuitReader.h  vtkCircuitReader.xml  vtkCircuitReaderBase.cxx  vtkCircuitReaderBase.h  vtkCircuitReaderBase.xml  vtkCircuitReaderBase.xml.in  vtkCircuitReaderMesh.cxx  vtkCircuitReaderMesh.h  vtkCircuitReaderMesh.xml  vtkCircuitReaderSoma.cxx  vtkCircuitReaderSoma.h  vtkCircuitReaderSoma.xml  vtkH5MCellReader.cxx  vtkH5MCellReader.xml  vtkMeshBinReader.cxx  vtkMeshBinReader.h  vtkMeshBinReader.xml  vtkMorphologyReader.cxx  vtkNeuronAlphaFunction.cxx  vtkNeuronAlphaFunction.xml  vtkNeuronSpikeFilter.cxx  vtkNeuronSpikeFilter.h  vtkNeuronSpikeFilter.xml  vtkNeuronSpikeTableSource.cxx  (+2 more)
VolumeDensityReader/proj/cmake/: BBPVolumeDensityReader.qrc  BBPVolumeDensityReaderPluginImplementation.cxx  BBPVolumeDensityReaderPluginImplementation.h  Makefile  moc_BBPVolumeDensityReaderPluginImplementation.cxx  qrc_BBPVolumeDensityReader.cxx  vtkSMXML_BBPVolumeDensityReader.h
VolumeDensityReader/src/: vtkVolumeDensityReader.cxx  vtkVolumeDensityReader.h
VolumeDensityReader/src/tests/: CMakeCache.txt  cmake_install.cmake
VolumeDensityReader/xml/: GUIVolumeDensityReader.xml
bbp/: Extend_Paraview_Reader.txt  Morphology_Browser.txt
bbp/BBPCircuitReader/: CMakeLists.txt  NOTES.txt  Sort.h  pqCircuitReaderPanel.cxx  pqCircuitReaderPanel.h  pqCircuitReaderPanel.ui  pv_BBP_Filters.xml  pv_BBP_Readers.xml  pv_BBP_Sources.xml  test_bbplink.cpp  vtkAlphaTransform.cxx  vtkAlphaTransform.h  vtkAlphaTransform.xml  vtkCircuitReader.cxx  vtkCircuitReader.h  vtkCircuitReader.xml  vtkDepthSortDefaultPainter.cxx  vtkDepthSortDefaultPainter.h  vtkDepthSortPainter.cxx  vtkDepthSortPainter.h  vtkDepthSortPolyData2.cxx  vtkDepthSortPolyData2.h  vtkDepthSortPolygonsPainter.cxx  vtkDepthSortPolygonsPainter.h  vtkDepthSortRepresentation.cxx  vtkDepthSortRepresentation.h  vtkDepthSortRepresentation.xml  vtkH5MCellReader.cxx  vtkH5MCellReader.h  vtkH5MCellReader.xml  vtkMeshBinReader.cxx  vtkMorphologyReader.h  vtkNeuronAlphaFunction.cxx  vtkNeuronAlphaFunction.h  vtkNeuronAlphaFunction.xml  vtkPistonDeclarations.h  vtkTwoScalarsToColorsPainter.cxx  vtkTwoScalarsToColorsPainter.h
bbp/BBPCircuitReader/Piston/: CMakeLists.txt  module.cmake  vtkDataSetToPiston.cxx  vtkPistonContour.cu  vtkPistonConverters.cu  vtkPistonDataWrangling.h  vtkPistonMapper.cu  vtkPistonMapper.cxx  vtkPistonMapper.h  vtkPistonPolygonsPainter.cxx  vtkPistonPolygonsPainter.h
bbp/BBPMeshBinReader/doc/: README.txt
bbp/BBPMeshBinReader/proj/cmake/: CMakeLists.txt
bbp/BBPMeshBinReader/src/: vtkMeshBinReader.cxx  vtkMeshBinReader.h
bbp/BBPMeshBinReader/src/tests/viz_mesh/: CMakeLists.txt  Modules  VisualizeMesh.cxx  configure  vtkMeshBinReader.cxx  vtkMeshBinReader.h
bbp/BBPMeshBinReader/xml/: GUIMeshBinReader.xml
bbp/BBPMorphologyReader/data/: T-C170897A-P2.h5
bbp/BBPMorphologyReader/doc/: README.txt
bbp/BBPMorphologyReader/proj/cmake/: CMakeLists.txt
bbp/BBPMorphologyReader/src/: vtkMorphologyReader.cxx  vtkMorphologyReader.h
bbp/BBPMorphologyReader/src/tests/: CMakeLists.txt  Modules  (+3 more)
bbp/BBPMorphologyReader/xml/: GUIMorphologyReader.xml  MorphologyReader.xml
bbp/BBPVolumeDensityReader/data/: bht_blueconfig.cfg
bbp/BBPVolumeDensityReader/doc/: README.txt
bbp/BBPVolumeDensityReader/src/: vtkVolumeDensityReader.cxx  vtkVolumeDensityReader.h
bbp/BBPVolumeDensityReader/src/tests/: CMakeLists.txt  Makefile  Modules  VisualizeVolumeDensity  VisualizeVolumeDensity.cxx  \  vtkVolumeDensityReader.cxx  vtkVolumeDensityReader.h
bbp/BBPVolumeDensityReader/src/tests/vtk_exemples/pickingpixel/: CMakeLists.txt  toto
bbp/BBPVolumeDensityReader/src/tests/vtk_exemples/pickpixelvalue_win/: DevSample_PickPixelValue.sln
bbp/BBPVolumeDensityReader/src/tests/vtk_exemples/pickpixelvalue_win/DevSample_PickPixelValue/: DevSample_PickPixelValue.vcproj  VtkObserverErrorWarning.cpp  VtkObserverErrorWarning.h  VtkObserverMouseMove.cpp  VtkObserverMouseMove.h  WrapperVtkDisplayDICOMImage.cpp  WrapperVtkDisplayDICOMImage.h  WrapperVtkText.cpp  WrapperVtkText.h  main.cpp  readme.txt
bbp/BBPVolumeDensityReader/src/tests/vtk_exemples/simple_vtkImageData/: CMakeCache.txt  CMakeLists.txt  simple_vtkImageData
bbp/BBPVolumeDensityReader/src/tests/vtk_exemples/simple_vtkImageData_viz/: CMakeLists.txt
bbp/BBPVolumeDensityReader/src/tests/vtk_exemples/volrendering/: CMakeLists.txt  cmake_install.cmake  volrendering
bbp/BBPVolumeDensityReader/src/tests/vtk_exemples/vtkImageAlgorithmFilter/: CMakeLists.txt  cmake_install.cmake  vtkImageAlgorithmFilter  vtkImageAlgorithmFilter.cxx
bbp/BBPVolumeDensityReader/src/tests/vtk_exemples/vtkImageDataFilter/: CMakeLists.txt  vtkImageProcess  vtkImageProcess.cxx  vtkImageProcess.h
bbp/BBPVolumeDensityReader/src/tests/vtk_exemples/vtkImageIO/: CMakeLists.txt  vtkimageio.cxx  vtkimagewriter.cxx
bbp/BBPVolumeDensityReader/src/tests/vtk_exemples/vtkImageWriter/: vtkimagewriter.cxx
bbp/BBPVolumeDensityReader/src/tests/vtk_exemples/vtkcontour/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  vtkcontour.cxx
bbp/BBPVolumeDensityReader/xml/: VolumeDensityReader.xml
mcellanim/data/: test.h5part  test2.h5part
mcellanim/data/meshes/: a276_FILTERED_SMOOTH_SMOOTH_SCALED.vtk
mcellanim/python/: create_dataset.py  read_dx_position.py
mcellanim/python/input/: <
old-tests/vtk_exemples/coloredlines/: coloredlines.cxx
old-tests/vtk_exemples/polylines/: polylines
scripts/: 5K-voltage-differentials.py  5k-castor-generate_jobs.sh  5k-castor.py  5k-todi-generate_jobs.sh  5k-vd-generate_jobs.sh  box-column.py  sphere-piston.py  test-piston-sphere.py  voltageDifferentials.py  voltageHelix1.py  voltageHelix2.py
(+56 files in other folders)
